Individual_Homework/wk11-11-18-2025-homework/3-IGW.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.app1.id

  tags = {
    Name    = "app1_IGW"
    Service = "application1"
    Owner   = "ThisGuy"
    Planet  = "Earth"
  }
}
