Individual_Homework/wk11-11-18-2025-homework/4-NAT.tf
resource "aws_eip" "nat" {

#vpc = true
#use for ec2 classic, deprecated


  tags = {
    Name = "nat"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public-us-east-2a.id

  tags = {
    Name = "nat"
  }

  depends_on = [aws_internet_gateway.igw]
}
